# soccer

./: .gitignore  BASIC_DEMO_ROTATION_TEST.md  BSPLINE_180_DEGREE_FIX.md  BSPLINE_REAL_ROBOT_FIX.md  BSPLINE_REAL_ROBOT_ISSUES.md  BSPLINE_ROTATION_FINDINGS.md  BSPLINE_ROTATION_LIMITATIONS.md  BSplineDocument.tex  BallInteractionModels.tex  CARPET_FRICTION_CONFIG.md  CMakeCache.txt  CMakeLists.txt  DEMO_FOLLOW_PATH_FIX.md  README.md  REAL_ROBOT_DEBUGGING.md  ROTATION_FIX_SUMMARY.md  SMOOTHING_IMPACT_ANALYSIS.md  SumatraTrajectoryPlanner.tex  TRAJECTORY_COMPARISON.md  analysis_report.md  analyze_robot_log.py  analyze_state_estimation.py  analyze_trajectory.py  analyze_trajectory_headless.py  bspline_corner_analysis_summary.txt  bspline_corner_improvement_summary.txt  bsplinedoc.tex  debug_parse.py  debug_waypoints.sh  doc.tex  integration_example.cpp  kalman_detailed_log.txt  kalman_filter_details.txt  kalman_filter_log.txt  kinematic_analysis.py  lookup_table.py  message.txt  plot_bspline_improved.py  plot_kalman_analysis.py  plot_kalman_internals.py  (+27 more)
apps/: AlgosEngine.cpp  CMakeLists.txt  ComputerControl.cpp  SoccerEngine.cpp  SoccerManualGame.cpp  SoccerTeamManual.cpp  TwoTeams.cpp
libs/Ctrl_Vl/: CMakeLists.txt
libs/Ctrl_Vl/Demo_app/: CMakeLists.txt
libs/Ctrl_Vl/GraphPlot/: GraphSpeedtime.py
libs/Ctrl_Vl/include/: CalcVel.h
libs/Ctrl_Vl/src/: CalcVel.cpp
libs/algos/: CMakeLists.txt
libs/algos/demo/: CMakeLists.txt  DemoAlgo.cpp  DemoAstar.cpp  DemoOpponentDribbleContest.cpp  DemoOpponentDribbling.cpp  DemoRRTDribble.cpp  DemoRRTKick.cpp  DemoRRTX.cpp  DemoRandom.cpp  demo.cpp  demo_bspline_corner_improved.cpp  demo_bspline_friction.cpp  demo_bspline_replanning_comparison.cpp  demo_bspline_replanning_with_state_estimation.cpp  demo_bspline_robust.cpp  demo_bspline_simple.cpp  demo_bspline_simple_fixed.cpp  demo_kalman_logging.cpp  demo_replay_sensor_data.cpp  demo_rrt_bspline_visualization.cpp  demo_stable_waypoints.cpp  demo_trajectory_comparison.cpp  demo_virtual_robot_bspline.cpp  demo_virtual_robot_fixed.cpp  demo_with_logging.cpp  simulate_log_file_demo.cpp
libs/algos/include/: AStar.h  Algos.h  Astar.h  Grid.h  PQueue.h  Planning.h  RRT.h  RRTX.h  Vector2D.h  ball_intercept.h  path_trajectory.h
libs/algos/src/: AStar.cpp  Algos.cpp  Algos.cpp.rej  Astar.cpp  Grid.cpp  PQueue.cpp  Planning.cpp  RRT.cpp  RRTX.cpp  ball_intercept.cpp  path_trajectory.cpp
libs/algos/test/: CMakeLists.txt  TestAStar.cpp  TestPathTrajectory.cpp  TestRRT.cpp  TestRRTAccuracy.cpp  TestRRTCollisionDebug.cpp  TestRRTX.cpp  TestSinglePath.cpp
libs/comms/: CMakeLists.txt
libs/comms/examples/: CMakeLists.txt  manager_example.cpp  raw_receiver_example.cpp  receiver_example.cpp  recieve_test.cpp  send_test.cpp  sender_example.cpp  wifi_test.cpp
libs/comms/include/: UdpBase.h  UdpReceiver.h  UdpSender.h  UdpWifi.h  VisionManager.h  VisionTypes.h
libs/comms/src/: UdpBase.cpp  UdpReceiver.cpp  UdpSender.cpp  UdpWifi.cpp  VisionManager.cpp
libs/ctrl/: CMakeLists.txt  instructions.md
libs/ctrl/demo/: CMakeLists.txt  OmnidirectionalTrajectoryDemo.cpp  demo.cpp
libs/ctrl/docs/: HermiteSplineTrajectoryPlanner.md
libs/ctrl/examples/: BangBangTrajectoryExample.cpp  FullBangBangIntegration.cpp
libs/ctrl/include/: AccelerationEnvelope.h  AdaptiveTrajectory3D.h  BSplineTrajectory.h  BSplineTrajectoryManager.h  BangBangTrajectory.h  BangBangTrajectory3D.h  BangBangTrajectoryPlanner.h  BezierTrajectoryPlanner.h  CubicHermiteSplineTrajectory.h  DBRRTTrajectoryPlanner.h  Heading1D.h  HermiteSplineTrajectoryManager.h  M_TrajectoryController.h  M_TrajectoryPlanner.h  M_TrajectorySegment.h  MotionController.h  OmnidirectionalTrajectoryGenerator.h  PurePursuitController.h  PurePursuitTrajectoryManager.h  Spline2D.h  SplineTrajectory3D.h  Trajectory3D.h  TrajectoryManager.h  TrapezoidalTrajectory3D.h  TrapezoidalTrajectoryVi3D.h  UniformBSplineTrajectoryPlanner.h  WaypointHandler.h
libs/ctrl/py/: Instructions.md  NonZeroTrapPlot.py  TrajectoryPlot.py  plot_spline_data.py  vis.py
libs/ctrl/src/: AccelerationEnvelope.cpp  AdaptiveTrajectory3D.cpp  BSplineTrajectory.cpp  BSplineTrajectoryCornerImproved.cpp  BSplineTrajectoryManager.cpp  BSplineTrajectoryManagerWithReplanning.cpp  BangBangTrajectory.cpp  BangBangTrajectory3D.cpp  BangBangTrajectory3D.cpp.bak  BangBangTrajectoryPlanner.cpp  BezierTrajectoryPlanner.cpp  CubicHermiteSplineTrajectory.cpp  DBRRTTrajectoryPlanner.cpp  Heading1D.cpp  HermiteSplineTrajectoryManager.cpp  M_TrajectoryController.cpp  M_TrajectoryPlanner.cpp  M_TrajectorySegment.cpp  MotionController.cpp  OmnidirectionalTrajectoryGenerator.cpp  PurePursuitController.cpp  PurePursuitTrajectoryManager.cpp  Spline2D.cpp  SplineTrajectory3D.cpp  Trajectory3D.cpp  TrajectoryManager.cpp  TrajectoryMergeLogic.cpp  TrapezoidalTrajectory3D.cpp  TrapezoidalTrajectoryVi3D.cpp  UniformBSplineTrajectoryPlanner.cpp  WaypointHandler.cpp  test_coordinate_transform.cpp
libs/ctrl/test/: CMakeLists.txt  TestMTrajectoryPlanner.cpp  TestMotionController.cpp  TestOmnidirectionalTrajectoryGenerator.cpp  TestTrajectory.cpp  TestTrajectoryMerge.cpp  test_bangbang_trajectory.cpp
libs/hw/: CMakeLists.txt
libs/hw/include/: GyroDriver.h  GyroModel.h  HardwareManager.h  HwConfig.h  MotorDriver.h  MotorModel.h  SensorDriver.h  SensorModel.h
libs/hw/py/: ReceiveRpms.py  ReceiveSensorData.py  ReceiveWheelSpeeds.py  SendRpms.py  SendWheelSpeeds.py
libs/hw/src/: GyroDriver.cpp  GyroModel.cpp  HardwareManager.cpp  MotorDriver.cpp  MotorModel.cpp  SensorDriver.cpp  SensorModel.cpp
libs/hw/test/: CMakeLists.txt  TestHardwareManager.cpp  TestMotorModel.cpp  TestSensorDriver.cpp
libs/kin/: CMakeLists.txt
libs/kin/demo/: CMakeLists.txt  KICKDEMO_README.md  dribblingdemo.cpp  kickdemo.cpp  kickdemo.cpp.orig  kickdemo_multipoint.cpp  kickdemo_perfect_waypoints.cpp  kickdemo_simple_waypoints.cpp  simple_trajectory_test.cpp  waypoint_comparison.cpp
libs/kin/include/: ActionExecutor.h  BallModel.h  Collision.h  (+7 more)
libs/rob/: CMakeLists.txt
libs/utils/: CMakeLists.txt
libs/vis/: CMakeLists.txt
(+367 files in other folders)
